tests/test_exception/bad/output/self_exception.catala_en.A.Interpret
[ERROR] Cannot define rule as an exception to itself

  --> test_exception/bad/self_exception.catala_en
   | 
10 |   definition y equals 0
   |              ^
   + Test
